@@ -229,6 +229,11 @@
            <fileset dir="${build.classes.dir}" includes="Hl7Snd*,Configuration*"/>
            <fileset dir="${build.res.dir}" includes="Hl7Snd*"/>
       </jar>
+      <jar jarfile="${build.samples.dir}/hl7rcv.jar"
+           manifest="${build.res.dir}/META-INF/hl7rcv.mf">
+           <fileset dir="${build.classes.dir}" includes="Hl7Rcv*,Configuration*"/>
+           <fileset dir="${build.res.dir}" includes="Hl7Rcv*"/>
+      </jar>
       <jar jarfile="${build.samples.dir}/mppssnd.jar"
            manifest="${build.res.dir}/META-INF/mppssnd.mf">
            <fileset dir="${build.classes.dir}" includes="MppsSnd*,Configuration*"/>
@@ -344,12 +349,14 @@
             <include name="DcmSnd.java"/>
             <include name="MppsSnd.java"/>
             <include name="Hl7Snd.java"/>
+            <include name="Hl7Rcv.java"/>
          </fileset>
          <fileset dir="${samples.res.dir}">
             <include name="DcmRcv.properties"/>
             <include name="DcmSnd.properties"/>
             <include name="MppsSnd.properties"/>
             <include name="Hl7Snd.properties"/>
+            <include name="Hl7Rcv.properties"/>
          </fileset>
       </copy>
 
