@@ -1,0 +1,14 @@
+max-clients=10
+so-timeout=0
+
+receiving-apps=<any>
+sending-apps=<any>
+
+protocol=mllp
+#protocol=mllp-tls
+#protocol=mllp-tls.nodes
+#protocol=mllp-tls.3des
+tls-key=hl7rcv.key
+tls-key-passwd=dcm4che
+tls-cacerts=cacerts
+tls-cacerts-passwd=dcm4che
