@@ -1,0 +1,7 @@
+usage=Usage\: java -jar hl7rcv.jar [OPTION]... PORT\nStart DICOM Server listening on PORT\nOptions (override presets defined in resource dcmrcv.cfg)\:\n--max-clients=NUM      maximum number of simultaneous clients [default=10].\n--so-timeout=MSEC      time-out waiting for messages on open TCP connection,\n--receiving-apps=APP1,..  only messages with matching receiving and\n--sending-apps=APP1,..    sending APP will be accepted. [default: <any>]\n--mllp-tls             accept TLS connection (offer DES encryption)\n--mllp-tls.3des        accept TLS connection (force DES encryption)\n--mllp-tls.nodes       accept TLS connection (no DES encryption)\n--tls-key=KEYSTORE     get key from specified resource [default:dcmrcv.key]\n--tls-key-passwd=PASS  password for keystore and key specified by --tls-key\n                       [default: dcm4che]\n--tls-cacerts=KEYSTORE read trusted CA Certificats from specified resource\n                       [default:cacerts]\n--tls-cacerts-passwd=PASS  password for keystore specified by --tls-cacerts\n                       [default: dcm4che]\n--help     display this help and exit\n--version  output version information and exit\n
+version=hl7rcv version @VERSION@ compiled on @TODAY@
+missing=missing port argument
+many=too many arguments
+try=Try 'java -jar hl7rcv.jar --help' for more information.
+cfg=Configuration\:
+
